syntax = "proto3";

package shopping_admin;

option go_package = "build/shopping_admin";
import "protos/global/global.proto";

message ProductCategory {
  // 商品分类id
  string productCategoryId = 1;  // @gotags: gorm:"primary_key;<-:create" validate:"required"
  // 上级分类
  string parentId = 2;  //  @gotags: gorm:"<-:create" validate:"required"
  // 名称
  string name = 3;  //  @gotags: gorm:"<-" validate:"required"
  // 自营店铺分佣比例
  double selfRate = 4;  //  @gotags:  gorm:"<-"
  // 普通店铺分佣比例
  double profitSharing = 5;  //  @gotags:  `gorm:"<-" json:"profitSharing"`
  // 排序
  int64 sortBy = 6;  //  @gotags:  `gorm:"<-" json:"sortBy"`
  // 是否子子级
  int64 childCount = 7;  //  @gotags:  `gorm:"-" json:"childCount" swaggerignore:"true"`
  // 删除状态
  bool delStatus = 8;  // @gotags: gorm:"-" swaggerignore:"true" minimum:"0" maximum:"1" default:"0"
  // 创建人
  string createBy = 9;  // @gotags: gorm:"->;<-:create" swaggerignore:"true" minLength:"6" maxLength:"19"
  // 修改人
  string updateBy = 10;  // @gotags: gorm:"->;<-:update" swaggerignore:"true" minLength:"6" maxLength:"19"
  // 创建时间
  string createTime = 11;  // @gotags: gorm:"->" swaggerignore:"true"
  // 修改时间
  string updateTime = 12;  // @gotags: gorm:"->" swaggerignore:"true"
}

message ProductCategoryParam {
}

message ProductCategoryListVO {
  // 商品分类id
  string productCategoryId = 1;  // @gotags: gorm:"primary_key;<-:create" validate:"required"
  // 上级分类
  string parentId = 2;  //  @gotags: gorm:"<-:create" validate:"required"
  // 名称
  string name = 3;  //  @gotags: gorm:"<-" validate:"required"
  // 自营店铺分佣比例
  double selfRate = 4;  //  @gotags:  gorm:"<-"
  // 普通店铺分佣比例
  double profitSharing = 5;  //  @gotags:  gorm:"<-"
  // 排序
  int64 sortBy = 6;  //  @gotags:  gorm:"<-" json:"sortBy"
  // 是否子子级
  int64 childCount = 7;  //  @gotags:  gorm:"-" swaggerignore:"true"
  // 子集分类
  repeated ProductCategoryListVO children = 8;  // @gotags: gorm:"-" json:"children"
}

message ProductCategoryIds {
  repeated string id = 1;
  string userId = 2;
  string parentId = 3;
}

// 分页查询加权参数
message ProductCategoryPageAuthQuery {
  // 分页索引
  int64 pageIndex = 1;
  // 分页长度
  int64 pageSize = 2;
  // 查询参数
  ProductCategoryParam params = 3;
  // 用户登录授权信息
  global.Auth auth = 4;  // @gotags: swaggerignore:"true"`
}

// 返回结果
message ProductCategoryResponse {
  int64 count = 1;  // 获取数据数量
  string Msg = 2;  // 错误信息
  ProductCategory detail = 3;  // 详情
  repeated ProductCategoryListVO list = 4;  // 列表
}

// 业务实现
service ProductCategoryService {
  // 新增
  rpc Create(ProductCategory) returns (ProductCategoryResponse);

  // 修改
  rpc Update(ProductCategory) returns (ProductCategoryResponse);

  // 删除
  rpc Delete(ProductCategoryIds) returns (ProductCategoryResponse);

  // 查询 详情
  rpc FindById(ProductCategoryIds) returns (ProductCategoryResponse);

  // 查询 分页
  rpc FindPageList(ProductCategoryPageAuthQuery) returns (ProductCategoryResponse);

  // 查询树形结构
  rpc FindTreeByParentId(ProductCategoryIds) returns (ProductCategoryResponse);

  // 根据id查询列表
  rpc FindListByParentId(ProductCategoryIds) returns (ProductCategoryResponse);
}
