syntax = "proto3";

package template;

option go_package = "build/shopping_admin";
import "protos/global/global.proto";

message ProductSpec {
  // 商品规格id
  string specId = 1;  // @gotags: gorm:"primary_key;<-:create"
  // 规格名称
  string name = 2;  // @gotags: gorm:"<-" validate:"required"
  // 绑定分类
  string productCategoryId = 3;  // @gotags: gorm:"<-" validate:"required"
  // 可选项
  string options = 4;  // @gotags: gorm:"<-" validate:"required"
  // 排序
  int64 sortBy = 5;
  // 删除状态
  bool delStatus = 6;  // @gotags: gorm:"-" swaggerignore:"true" minimum:"0" maximum:"1" default:"0"
  // 创建人
  string createBy = 7;  // @gotags: gorm:"->;<-:create" swaggerignore:"true" minLength:"6" maxLength:"19"
  // 修改人
  string updateBy = 8;  // @gotags: gorm:"->;<-:update" swaggerignore:"true" minLength:"6" maxLength:"19"
  // 创建时间
  string createTime = 9;  // @gotags: gorm:"->" swaggerignore:"true"
  // 修改时间
  string updateTime = 10;  // @gotags: gorm:"->" swaggerignore:"true"
}

message ProductSpecListVO {
  // 商品规格id
  string specId = 1;  // @gotags: gorm:"primary_key;<-:create"
  // 规格名称
  string name = 2;  // @gotags: gorm:"<-" validate:"required"
  // 绑定分类
  string productCategoryId = 3;  // @gotags: gorm:"<-" validate:"required"
  // 可选项
  string options = 4;  // @gotags: gorm:"<-" validate:"required"
  // 排序
  int64 sortBy = 5;
}

message ProductSpecDetailVO {
  // 商品规格id
  string specId = 1;  // @gotags: gorm:"primary_key;<-:create"
  // 规格名称
  string name = 2;  // @gotags: gorm:"<-" validate:"required"
  // 绑定分类
  string productCategoryId = 3;  // @gotags: gorm:"<-" validate:"required"
  // 可选项
  string options = 4;  // @gotags: gorm:"<-" validate:"required"
  // 排序
  int64 sortBy = 5;
}

// ProductSpecParam 查询参数
message ProductSpecParam {
}

// ProductSpecIds 规格id参数
message ProductSpecIds {
  // id集合
  repeated string ids = 1;
  // 用户id
  string userId = 2;
  // 分类id
  string productCategoryId = 3;
}

// 分页查询加权参数
message ProductSpecPageAuthQuery {
  // 分页索引
  int64 pageIndex = 1;
  // 分页长度
  int64 pageSize = 2;
  // 查询参数
  ProductSpecParam params = 3;
  // 用户登录授权信息
  global.Auth auth = 4;  // @gotags: swaggerignore:"true"`
}

// 返回结果
message ProductSpecResponse {
  int64 count = 1;  // 获取数据数量
  string Msg = 2;  // 错误信息
  ProductSpec detail = 3;  // 详情
  repeated ProductSpec list = 4;  // 列表
}

// 业务实现
service ProductSpecService {
  // 新增
  rpc Create(ProductSpec) returns (ProductSpecResponse);

  // 修改
  rpc Update(ProductSpec) returns (ProductSpecResponse);

  // 删除
  rpc Delete(ProductSpecIds) returns (ProductSpecResponse);

  // 查询 详情
  rpc FindById(ProductSpecIds) returns (ProductSpecResponse);

  // 查询 分页
  rpc FindPageList(ProductSpecPageAuthQuery) returns (ProductSpecResponse);

  //
  rpc FindListByProductCategoryId(ProductSpecIds) returns (ProductSpecResponse);
}
